// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`module api > can include ifRevisionID 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "ifRevisionID": "foo",
      "unset": [
        "year",
        "slug.auto",
      ],
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "slug._type": "slug",
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "slug.current": "@@ -6,7 +6,20 @@
 ard-
-iii
+with-a-vengeance
",
      },
      "id": "die-hard-iii",
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "arr[1]": null,
      },
    },
  },
]
`;

exports[`module api > can pass different document ID 1`] = `
[
  {
    "patch": {
      "id": "moop",
      "unset": [
        "year",
        "slug.auto",
      ],
    },
  },
  {
    "patch": {
      "id": "moop",
      "set": {
        "slug._type": "slug",
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "slug.current": "@@ -6,7 +6,20 @@
 ard-
-iii
+with-a-vengeance
",
      },
      "id": "moop",
    },
  },
  {
    "patch": {
      "id": "moop",
      "set": {
        "arr[1]": null,
      },
    },
  },
]
`;
